# GIS_Wasm_Algorithm

./: Cargo.toml  README.md  aaa.geojson  test.html
src/: common.rs  dijkstra.rs  lib.rs  main.rs
test/: test.html
