[package]
name = "GIS_Wasm_Algorithm"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
proj4rs = { version = "0.1.8", features = ["crs-definitions"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.5"
geo = "0.31.0"
geojson = { version = "0.24.2", features = ["geo-types"] }
js-sys = "0.3.78"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "1"
